[package]
name = "aparato"
description = "A pci.ids-compliant library for getting information about available PCI devices."
version = "6.0.1"
license = "MIT"
readme = "README.md"
edition = "2018"
repository = "https://github.com/grtcdr/aparato"
documentation = "https://docs.rs/aparato"
keywords = ["pci", "library", "hardware"]
categories = ["parser-implementations"]
authors = ["grtcdr <grtcdr@pm.me>"]

[dependencies]
cfg-if = "1.0.0"
hex = "0.4.3"
