[package]
name = "aparato"
description = "A library for querying PCI devices and a parser for pci.ids."
version = "6.0.2"
license = "MIT"
readme = "README.md"
edition = "2018"
repository = "https://github.com/grtcdr/aparato"
documentation = "https://docs.rs/aparato"
categories = ["parser-implementations"]
authors = ["grtcdr <grtcdr@pm.me>"]

[dependencies]
cfg-if = "1.0.0"
hex = "0.4.3"
